--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <title>
             Calculadora
         </title>
-        <link rel="stylesheet" type="text/css" href="../calculadora html/Style calculadora.css">
-        <script src="../calculadora html/javasc calculadora.js"></script>
+        <link href="https://vitor247.github.io/calculadora-html/style.css" rel="stylesheet"/>
+        <script src="https://vitor247.github.io/calculadora-html/scripts.js"></script>
     </head>
     <body><br>
         <form id=form1 method="get">
