--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>
             Calculadora
         </title>
-        <link href="https://vitor247.github.io/calculadora-html/style.css" rel="stylesheet"/>
+        <link href="https://vitor247.github.io/calculadora-html/style.css" rel="stylesheet">
         <script src="https://vitor247.github.io/calculadora-html/scripts.js"></script>
     </head>
     <body><br>
